[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intacct-sdk"
version = "0.1.0"
description = "Sage Intacct XML API SDK"
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
Changelog = "CHANGELOG.md"
Documentation = "Docs/usage.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
addopts = "-q"
